--- a/src/main/resources/templates/festival/read.html
+++ b/src/main/resources/templates/festival/read.html
@@ -9,7 +9,34 @@
 <body>
 <div class="container">
     <div layout:fragment="content" class="content">
-        <h1>축제 자세히 보기!</h1>
+        <h1>맛집 나도 알려 줘!</h1>
+            <div>
+                <label for="fno">
+                    <input id="fno" name="fno" type="text" th:value="${festivalDTO.fno}" readonly>
+                </label>
+                <label for="title">
+                    <input id="title" name="title" type="text" th:value="${festivalDTO.title}" readonly>
+                </label>
+                <label for="content">
+                    <input id="content" name="content" type="text" th:value="${festivalDTO.content}" readonly>
+                </label>
+                <label for="writer">
+                    <input id="writer" name="writer" type="text" th:value="${festivalDTO.writer}" readonly>
+                </label>
+                <div>
+                    <div class="row">
+                        <div class="col">
+                                <div class="card-body" th:each="fesImg: ${festivalDTO.faImgDTOList}">
+                                    <img width="500px" th:if="${not #strings.isEmpty(fesImg.imgUrl)}" th:src="@{|/images/fa/@{${fesImg.imgName}}|}" th:alt="${fesImg.imgName}">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <a th:href="|@{/festival/modify(fno=${festivalDTO.fno})}|" class="btn btn-default">
+                        수정
+                    </a>
+
+            </div>
     </div>
 </div>
 </body>
