--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -41,14 +41,20 @@
                     </div>
                     <div class="col-2">
                         <ul class="navbar-nav me-auto mb-2 mt-lg-5 justify-content-end">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/members/read" style="color: lightgray; font-size: small">My Page</a>
+                            <li class="nav-item" sec:authorize="isAuthenticated()">
+                                <span class="nav-link active" style="color: darkblue; font-size: small" th:text="${#authentication.getName() + ' 님 환영합니다'}"></span>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" sec:authorize="isAuthenticated()">
+                                <a class="nav-link active" aria-current="page" href="/members/read" style="color: darkgray; font-size: small">My Page</a>
+                            </li>
+                            <li class="nav-item" sec:authorize="isAnonymous()">
+                                <a class="nav-link" href="/members/register" style="color: lightgray; font-size: small">join</a>
+                            </li>
+                            <li class="nav-item" sec:authorize="isAnonymous()">
                                 <a class="nav-link" href="/members/login" style="color: lightgray; font-size: small">login</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#" style="color: lightgray; font-size: small">logout</a>
+                            <li class="nav-item" sec:authorize="isAuthenticated()">
+                                <a class="nav-link" href="/members/logout" style="color: lightgray; font-size: small">logout</a>
                             </li>
                         </ul>
                     </div>
