--- a/src/main/resources/templates/attraction/modify.html
+++ b/src/main/resources/templates/attraction/modify.html
@@ -14,7 +14,7 @@
         <form id="form-mul" action="/attraction/modify" method="post" enctype="multipart/form-data">
         <div>
             <label for="ano">
-                <input id="ano" name="ano" type="text" th:value="${attractionDTO.ano}" readonly>
+                <input id="ano" name="ano" type="hidden" th:value="${attractionDTO.ano}" readonly>
             </label>
             <label for="title">
                 <input id="title" name="title" type="text" th:value="${attractionDTO.title}">
@@ -30,7 +30,7 @@
                     <div class="col">
                         <div class="card-body" th:each="attImg: ${attractionDTO.faImgDTOList}">
                             <img width="500px" th:if="${not #strings.isEmpty(attImg.imgUrl)}" th:src="@{|/images/fa/@{${attImg.imgName}}|}" th:alt="${attImg.imgName}">
-                            <input type="text" name="imgIds" th:value="${attImg.ino}">
+                            <input type="hidden" name="imgIds" th:value="${attImg.ino}">
                         </div>
                     </div>
                 </div>
@@ -40,20 +40,9 @@
                 <label class="input-group-text cutom-file-label" th:text="이미지 + ${num}">Upload</label>
             </div>
             <button type="submit" class="btn btn-default">저장</button>
-            <button type="button" class="btn btn-default removeBtn">삭제</button>
         </div>
         </form>
     </div>
 </div>
-    <script layout:fragment="script" th:inline="javascript">
-    const formObj = document.querySelector("#form-mul");
-    document.querySelector(".removeBtn").addEventListener("click", function (e){
-        e.preventDefault()
-        e.stopPropagation()
-        formObj.action = "/attraction/delete";
-        formObj.method = "post";
-        formObj.submit();
-    })
-</script>
 </body>
 </html>
