--- a/src/main/resources/templates/attraction/read.html
+++ b/src/main/resources/templates/attraction/read.html
@@ -10,6 +10,7 @@
 <div class="container">
     <div layout:fragment="content" class="content">
         <h1>맛집 나도 알려 줘!</h1>
+        <form id="form-mul" action="/attraction/modify" method="get" enctype="multipart/form-data">
             <div>
                 <label for="ano">
                     <input id="ano" name="ano" type="text" th:value="${attractionDTO.ano}" readonly>
@@ -32,12 +33,23 @@
                             </div>
                         </div>
                     </div>
-                    <a th:href="|@{/attraction/modify(ano=${attractionDTO.ano})}|" class="btn btn-default">
-                        수정
-                    </a>
-
+                <th:block th:if="${attractionDTO.writer} == ${#authentication.principal.username}">
+                    <button type="submit" class="btn btn-default">수정</button>
+                    <button type="button" class="btn btn-default removeBtn">삭제</button>
+                </th:block>
             </div>
+        </form>
     </div>
 </div>
+    <script layout:fragment="script" th:inline="javascript">
+        const aaa = document.querySelector("#form-mul");
+        document.querySelector(".removeBtn").addEventListener("click", function (e){
+            e.preventDefault()
+            e.stopPropagation()
+            aaa.action = "/attraction/delete";
+            aaa.method = "post";
+            aaa.submit();
+        })
+    </script>
 </body>
 </html>
